--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,16 +1,20 @@
+
 .body-wrap {
+    
     position: absolute;
     top: 0;
     left: 0;
     height: 100vh;
     width: 100vw;
-    background-color: black;
+    background-color: #100D10;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .content-box {
+    /* font-family: 'Courier New', Courier, monospace; */
+    font-family: 'Courier New', Courier, monospace;
     background-image: url("../assets/images/patternBottom.png");
     position: absolute;
     overflow: hidden;
@@ -24,7 +28,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 1px;
+    height: 0.1px;
     background-color: white;
     /* top: var(--xaxis); */
 }
@@ -32,7 +36,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 1px;
+    width: 0.1px;
     height: 100%;
     background-color: white;
 }
@@ -48,7 +52,7 @@
     background-size: inherit;
     height: 100%;
     width: 100%;
-    background-color: black;
+    background-color: #100D10;
     z-index: 5;
 }
 .cover-image .image2 {
@@ -61,3 +65,48 @@
     width: 100%;
     z-index: 2;
 }
+
+.main-content {
+    position: absolute;
+    z-index: 1;
+    background-color: #100D10;
+    bottom: 0;
+    right: 0;
+}
+.inner-content {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.title-text {
+    position: absolute;
+    top: 40px;
+    left: 40px;
+    font-size: xx-large;
+    color: white;
+}
+.title-description {
+    font-size: large;
+    color: #c5003a;
+}
+.li-wrap {
+    position: absolute;
+    bottom: 40px;
+    height: 70%;
+    width: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 300px;
+}
+.li-box {
+    flex: 1;
+    text-align: right;
+    color: white;
+    padding-right: 20px;
+  }
